[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/player.png" type="Texture" id=2]
[ext_resource path="res://src/Scripts/PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://src/Shaders/Outline.tres" type="Material" id=5]
[ext_resource path="res://src/Scenes/MoveOrDie.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Assets/normal_map_explosion.png" type="Texture" id=7]
[ext_resource path="res://src/Assets/explosion.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.7615, 9.02 )

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.101, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 58, 58, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Texture:normal_map")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ null, null, ExtResource( 7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MoveOrDie:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 39, 45, 45 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.59065, 0.697429, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 52, 52 ]
}

[sub_resource type="Animation" id=8]
resource_name = "flash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 2
script = ExtResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Texture" type="Sprite" parent="."]
material = ExtResource( 5 )
texture = ExtResource( 2 )
hframes = 58
frame = 39

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.423, 2.02 )
scale = Vector2( 0.22099, 1 )
shape = SubResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )
anims/wall_slide = SubResource( 7 )

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 8 )

[node name="DebugState" type="Label" parent="."]
visible = false
margin_left = -16.3518
margin_top = -49.0554
margin_right = 23.6482
margin_bottom = -35.0554
text = "state"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MoveOrDie" parent="." instance=ExtResource( 6 )]
margin_left = -16.0
margin_top = -31.0
margin_right = 14.0
margin_bottom = -1.0
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
